echo/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
  labels:
    name: echo
  annotations:
    linkerd.io/inject: enabled
